--- a/frontend/src/pages/Login/Login.css
+++ b/frontend/src/pages/Login/Login.css
@@ -1,7 +1,9 @@
 body {
-    background-color: #393939;
+    background-color: #343434;
 }
 form {
+    margin: auto;
+    width: 30%;
     padding: 50px;
     background-color: #232323;
     border-radius: 10px;
