--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -3,14 +3,21 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 12px 24px;
     background-color: #fff;
-    color: black;
+    color: #000000;
     width: 100%;
+    padding: 0 20px;
+    cursor: pointer;
 }
 
 .nav-links {
+    list-style-type: none;
     display: flex;
     justify-content: center;
     gap: 30px;
+}
+
+a {
+    text-decoration: none;
+    color: black;
 }
