--- a/frontend/src/pages/Login/Login.css
+++ b/frontend/src/pages/Login/Login.css
@@ -3,14 +3,27 @@ body {
 }
 form {
     margin: auto;
-    width: 30%;
+    max-width: 40%;
+    margin-top: 100px;
     padding: 50px;
-    background-color: #232323;
-    border-radius: 10px;
+    backdrop-filter: blur(20px);
+    border-radius: 20px;
 }
+
+form h1 {
+    text-align: center;
+}
+
+h4 {
+    padding: 0;
+    margin: 0;
+    text-align: center;
+}
+
 input {
-    border: none;
-    background-color: none;
+    width: 40%;
+    border: 2px white solid;
+    background-color: transparent;
     border-radius: 10px;
     margin: 10px;
     padding: 10px;
