--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -8,6 +8,7 @@
     width: 100%;
     padding: 0 20px;
     cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
 }
 
 .nav-links {
@@ -18,6 +19,7 @@
 }
 
 a {
+    margin: 2px;
     text-decoration: none;
     color: black;
 }
