--- a/frontend/src/pages/Login/Login.css
+++ b/frontend/src/pages/Login/Login.css
@@ -5,31 +5,43 @@ body {
     background-size: cover;
     background-attachment: fixed;
 }
-form {
+.form-login {
     margin: auto;
-    max-width: 35%;
+    max-width: 30%;
     margin-top: 100px;
-    padding: 50px;
-    backdrop-filter: blur(20px);
+    padding: 30px;
     border-radius: 20px;
-    box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+    background: rgba(255, 255, 255, 0.217);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(3px);
+    -webkit-backdrop-filter: blur(7.1px);
+    border: 1px solid rgba(255, 255, 255, 0.68);
 }
 
-form h1 {
-    text-align: center;
+.form-login h1 {
+    font-size: 3em;
+    margin: 0 60px;
+    text-align: left;
 }
 
-h4 {
+.form-login h4 {
     padding: 0;
-    margin: 0;
-    text-align: center;
+    margin: 0 60px;
+    text-align: left;
 }
 
-input {
-    width: 40%;
-    border: 2px white solid;
+.form-login input {
+    width: 70%;
+    border: 1px white solid;
     background-color: transparent;
-    border-radius: 10px;
+    border-radius: 5px;
     margin: 10px;
     padding: 10px;
+}
+
+.form-login button {
+    margin-top: 30px;
+    background-color: #fff;
+    color: black;
 }
