--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,14 @@
 @import "tailwindcss";
+
+@font-face {
+    font-family: "SN Pro";
+    font-style: normal;
+    font-weight: 100 900;
+    font-display: swap;
+    src: url("./assets/fonts/SN_Pro/SNPro-VariableFont_wght.ttf")
+        format("truetype");
+}
+
+@theme {
+    --font-SnPro: "SN Pro", sans-serif;
+}
