Primer fetch a la API

--- a/frontend/src/pages/Login/Login.css
+++ b/frontend/src/pages/Login/Login.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("https://res.cloudinary.com/itermotus/f_auto,w_992,h_480,c_fill,g_auto,dpr_2/assets/lasbrisashotels/lashadas/galeria/lashadas_galeria-17.jpg");
+    background-image: url("../../../imgs/LoginResources/Login_hadas.jpeg");
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
