--- a/frontend/src/pages/Login/Login.css
+++ b/frontend/src/pages/Login/Login.css
@@ -1,7 +1,7 @@
-body {
+/* body {
     background-image: url("../../../imgs/LoginResources/Login_hadas.jpeg");
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
     background-attachment: fixed;
-}
+} */
